# frundles

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  todo.txt
docs/: index.md
src/frundles/: __about__.py  __init__.py  __main__.py  errors.py
src/frundles/backend/: artifact.py  catalog.py  library.py  workspace.py
src/frundles/exchange/: lock_file.py  workspace_file.py
src/frundles/frontend/: __init__.py  bump.py  bump_all.py  list.py  locate.py  sync.py
src/frundles/io/: available_handlers.py  base.py  tty.py  vivado.py
src/frundles/model/: __init__.py
tests/: __init__.py
