[build-system]
requires        = ["hatchling", "versioningit"]
build-backend   = "hatchling.build"


##################################################
# Generic project information
##################################################

[project]
name            = "frundles"
dynamic         = ["version"]
description     = 'IP catalog manager'
readme          = "README.md"
requires-python = ">=3.8"
license         = "BSD-2-Clause"
keywords        = []

authors = [
  { name = "Florian Dupeyron", email = "florian.dupeyron@mugcat.fr" },
]

classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
	"pyyaml",
	"furl",
	"GitPython",
	"colorama",
	"coloredlogs",
	"tabulate",
]


[project.urls]
Documentation = "https://github.com/fdmysterious/frundles"
Issues        = "https://github.com/fdmysterious/frundles/issues"
Source        = "https://github.com/fdmysterious/frundles"

[tool.hatch.version]
source="versioningit"


##################################################
# Versioning configuration
##################################################

[tool.versioningit.format]
# Format used when there have been commits since the most recent tag:
distance = "{base_version}.post{distance}+{vcs}{rev}"
# Example formatted version: 1.2.3.post42+ge174a1f

# Format used when there are uncommitted changes:
dirty = "{base_version}+d{build_date:%Y%m%d}"
# Example formatted version: 1.2.3+d20230922

# Format used when there are both commits and uncommitted changes:
distance-dirty = "{base_version}.post{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"
# Example formatted version: 1.2.3.post42+ge174a1f.d20230922


##################################################
# Entrypoints
##################################################

[project.scripts]
frundles = "frundles.frontend:main"


##################################################
# Tools configuration
##################################################

## ---------------------------- Coverage

[tool.coverage.run]
source_pkgs = ["frundles", "tests"]
branch      = true
parallel    = true
omit        = [
	"src/frundles/__about__.py"
]

[tool.coverage.paths]
frundles = ["src/frundles", "*/frundles/src/frundles"]
tests                         = ["tests", "*/test-template/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


##################################################
# Environments configuration
##################################################

## ---------------------------- Default environment

[tool.hatch.envs.default]

dependencies = [
]


## ---------------------------- Type-checking environment

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/frundles tests}"


## ---------------------------- Documentation generation environment

[tool.hatch.envs.docs]
dependencies = [
	"mkdocs",
	"mkdocs-material",
	"mkdocs-roamlinks-plugin",
	"mkdocstrings",
	"mkdocstrings[python]",
	"mkdocs-gen-files",
	"mkdocs-literate-nav",
	"erdantic"
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build"


## ---------------------------- Linting environment

[tool.hatch.envs.lint]

dependencies = [
	"ruff",
	"black",
]


[tool.hatch.envs.lint.scripts]

code-rules       = "ruff check src"
code-format      = "black src"

# Linting report using SARIF format for automation
code-rules-sarif = "ruff check src --output-format sarif -o .lint.sarif"
